<resources>
    <string name="app_name">sals</string>
    <string name="map_api_key">AIzaSyCbc2Y5AIwZ8uUeHRUXiozGN3CnpjKT0oI</string>
    <string name="login_title">Sign in to control your shipments and enjoy seamless services on your mobile phone</string>
    <string name="phone">phone</string>
    <string name="ok">ok</string>
    <string name="message">We will send you a verification code for the SMS message method</string>
    <string name="salsserviccenter">sals service centers</string>
    <string name="trackingshipments">Tracking shipments</string>
    <string name="confirmcode">Add confirm code</string>
    <string name="confirmcode2">confirm code</string>
    <string name="check">Check</string>
    <string name="confirmcodesms">The verification code was sent via SMS</string>
    <string name="sendmessage">send Small Message in (0:47)</string>
    <string name="serviccenter">Customer Service Centers</string>
    <string name="search_map">Search On Map</string>
    <string name="track_the_shipment">Track the shipment</string>
    <string name="delivery_number">delivery number</string>
    <string name="price_calculate">Price  Calculator</string>
    <string name="tracking">Tracking</string>
    <string name="more">More</string>
    <string name="welcome">welcome To You ...</string>
    <string name="display_of_shantaghan"> shipments</string>
    <string name="shipments">Shipments</string>
    <string name="account">My Account</string>
    <string name="account2">complete personal file</string>
    <string name="shipping_details">Shippment Details</string>
    <string name="payments">Payments</string>
    <string name="help_and_advice">Help and advice</string>
    <string name="personal_account">my personal account</string>
    <string name="customer_service_center">Customer Service Center</string>
    <string name="name">name</string>
    <string name="addres">addresses</string>
    <string name="email_addres">Email Addres</string>
    <string name="add_email_address">Add Email Address</string>
    <string name="payment_setting">payment Setting</string>
    <string name="manage_my_carde">Manage my carde</string>
    <string name="save_sign_in_for_payments">Save sign in for payments</string>
    <string name="alerts">Alerts</string>
    <string name="activate_notifications">Activate notifications</string>
    <string name="lang_setting">Language Setting</string>
    <string name="lang">Language</string>
    <string name="app_notif">App notifications inform you of regular updates on the site and the progress of your shipments</string>
    <string name="log_out">Log Out</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="save">save</string>
    <string name="sent_by">Sent by</string>
    <string name="sent_to">sent to</string>
    <string name="what_you_want_to_ship">What you want to ship ?</string>
    <string name="documents">documents</string>
    <string name="parcels">Parcels</string>
    <string name="number_of_pieces">number of pieces</string>
    <string name="approximate_weight_kg">Approximate Weight (kg)</string>
    <string name="size">size</string>
    <string name="when_will_the_shipment_be_ready">When will the shipment be ready</string>
    <string name="date">date</string>
    <string name="select_the_receiving_address">Select the receiving address</string>
    <string name="current_user">Current User</string>
    <string name="add_a_new_title">Add a new title</string>
    <string name="what_is_the_total_volume_of_all_your_shipments_with_us">What is the total volume of all your shipments with us</string>
    <string name="small">small</string>
    <string name="fit_the_bike">Fit the bike</string>
    <string name="if_you_make_more_than_30kg_of_your_shipments_please_visit_our_nearest_customer_service_center">If you make more than 30kg of your shipments. Please visit our nearest customer service center</string>
    <string name="tell_us_about_any_additional_details">Tell us about any additional details</string>
    <string name="example_of_breakable_content_will_be_available_at_the_reception_center">example:of breakable content will be available at the reception center</string>
    <string name="my_shipments">My Shipments</string>
    <string name="add_new_shipping">Add New Shipping</string>
    <string name="to_ryad_sa">to ryad , SA</string>
    <string name="one_piece_5_kg">one piece (5 kg)</string>
    <string name="_12000_ryal">12000 ryal</string>
    <string name="ship_it_one">Ship it one</string>
    <string name="total_deserved_amount">Total deserved amount</string>
    <string name="deserved_amount">deserved amount</string>
    <string name="confirmation">confirmation</string>
    <string name="pickup_date_time">choose pickup data and time frame</string>
    <string name="cash">Cash</string>
    <string name="credit_card">Credit Card</string>
    <string name="shipping_to">shipping to</string>
    <string name="fullname">enter first and last name</string>
    <string name="enter_address_or_select_on_map">enter address or select on map</string>
    <string name="not_sure_if_your_goods_are_acceptable_for_shipping_click_here">not sure if your goods are acceptable for shipping ?<a href="http://somesite.com/">click here</a> </string>
    <string name="deliver_in">deliver in</string>
    <string name="expected_delivery_on">Expected delivery on</string>
    <string name="additional_services">additional services</string>
    <string name="choose_extra_if_you_need">choose extra if you need</string>
    <string name="schedule_pickup">ٍSending</string>
    <string name="choose_extra_services">choose extra services</string>
    <string name="cash_on_delivry_service">Cash on Delivry service</string>
    <string name="ettra_charges_may_apply_by_selecting_certian_addotional_serrvices">Ettra Charges may apply by selecting certian addotional serrvices</string>
    <string name="name_or_building_number">Name or building number</string>
    <string name="example_elawdy_132">example elawdy 132</string>
    <string name="floor">Floor</string>
    <string name="additional_description">Additional description</string>
    <string name="example_near_teacher">Example of the nearest teacher to you</string>
    <string name="address_type">Address type</string>
    <string name="such_as_work_or_home">Such as work or home</string>
    <string name="school_books">school books</string>
    <string name="shipping_tracking_number">Shipping tracking number</string>
    <string name="schedule">Shipping</string>
    <string name="received">Received</string>
    <string name="sent">Sent</string>
    <string name="on_way_to">on the way to</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="done">done</string>
    <string name="computerized_price">computerized price</string>
    <string name="details_of_your_shipment">Details of your shipment</string>
    <string name="city">city</string>
    <string name="connection_options">Connection options</string>
    <string name="number_of_days">number of days</string>
    <string name="document_the_next_day">Document the next day</string>
    <string name="specify_the_date_of_receipt">Specify the date of receipt</string>
    <string name="last_name">Last name</string>
    <string name="my_address">my address</string>
    <string name="add_new_adddress">add new adddress</string>
    <string name="search_address">search for address</string>
    <string name="most_frequently_asked_questions">Most frequently asked questions</string>
    <string name="how_can_i_check_the_status_of_my_truck">How can I check the status of my truck?</string>
    <string name="support_box">Support Box</string>
    <string name="my_support_requests">My support requests</string>
    <string name="help_categories">Help categories</string>
    <string name="express_mail">Express Mail</string>
    <string name="to_add_a_credit_card_you_need_to_prepare_a_sals_account_using_your_email_address">To add a credit card you need to prepare a sals account using your email address</string>
    <string name="create_an_account">Create an account</string>
    <string name="all_information_is_transmited_over_ascure_connection">all information is transmited over ascure connection</string>
    <string name="description">description</string>
    <string name="shipping_dimensions">Shipping dimensions</string>
    <string name="demintion_for_eacj_piece">demintion for eacj piece</string>
    <string name="length_cm">Length cm</string>
    <string name="width_cm">width cm</string>
    <string name="hight_cm">Hight cm</string>
    <string name="volumetric_weight">Volumetric weight</string>
    <string name="gross_weight">Gross weight</string>
    <string name="total_weight">total_weight</string>
    <string name="field_req">Field Required</string>
    <string name="wait">Wait</string>
    <string name="failed">Failed</string>
    <string name="something">Something went haywire try again later</string>
    <string name="resend">Resend</string>
    <string name="notifications">notifications</string>
    <string name="inc_code_verification">Incorrect Code Verification</string>
    <string name="user_is_logedin">User Loged In</string>
    <string name="additional_detials">additional_detials</string>
    <string name="save_as_main_titile">Save as main titile</string>
    <string name="flat_num">flat number</string>
    <string name="time">Time</string>
    <string name="add_city">Add City</string>
    <string name="saudia">Saudia</string>
    <string name="pieces">pieces</string>
    <string name="kg">kg</string>
    <string name="ryal">Ryial</string>
    <string name="Delivery">Delivery will be through</string>
    <string name="days">Days</string>
    <string name="address_from">Shipping  From</string>
    <string name="address_to">Shipping to</string>
    <string name="cost_of_delivery">Cost of delivery</string>
    <string name="the_total_cost">the total cost</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="from_dhl">First Price</string>
    <string name="from_sals">Final Price</string>
    <string name="credit_number">credit number</string>
    <string name="cvc">CVC</string>
    <string name="sadad">Sadad</string>
    <string name="success">Succces</string>
    <string name="error_Email">Invalid Email</string>
    <string name="support_ticket">Support Ticket</string>
    <string name="is_about_shipment">is About Shipment</string>
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="select_shipments">Select Shipments</string>
    <string name="what_is_issue_relatef_to">What is issue relatef to</string>
    <string name="request_call">Request Call</string>
    <string name="is_answer_useful">is answer useful</string>
    <string name="addissue">Select Catogry</string>
    <string name="Shipment">Select Shipment That Has Problem</string>
    <string name="search_for_address">search for address</string>
    <string name="catogry_selected">Catogry Selected</string>
    <string name="shipments_selected_from_sent_order">shipments selected from sent order</string>
    <string name="shipments_selected_from_recived_order">shipments selected from recived order</string>
    <string name="error_data">Error Data</string>
    <string name="your_shipments_are_linked_to_the_above_phone_number">Your shipments are linked to the above phone number</string>
    <string name="if_you_need_to_change_the_phone_number_connected_to_your_account_smoothly">If you need to change the phone number connected to your account smoothly:</string>
    <string name="contact_customer_service"><a herf="Contact Customer Service">Contact Customer Service</a></string>
    <string name="example_3">example 3</string>
    <string name="name_must_have_space">Name Must Have Space</string>
    <string name="phons">Call us on : 9200 03450</string>
</resources>