<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/gray"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">


            <ImageView
                android:id="@+id/arrow"
                android:layout_width="45dp"
                android:layout_height="50dp"
                android:layout_weight=".01"
                android:paddingTop="13dp"
                android:paddingBottom="13dp"
                android:src="@drawable/ic_left_arrows"
                android:tint="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".99"
                android:gravity="center"
                android:text="@string/phone"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fillViewport="true"
        android:background="@color/white"

        >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    >
   <TextView
       android:id="@+id/tv_phone"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:textSize="15sp"
       android:textColor="@color/colorAccent"
       />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:text="@string/your_shipments_are_linked_to_the_above_phone_number"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        android:text="@string/if_you_need_to_change_the_phone_number_connected_to_your_account_smoothly"
        />
    <TextView
        android:id="@+id/tv_phone_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phons"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="15dp"
        android:textSize="16sp"

        />
    <TextView
        android:id="@+id/tv_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_customer_service"
        android:textColor="@color/blue"
        android:layout_marginTop="15dp"
        android:textSize="16sp"
        android:autoLink="all"
        android:linksClickable="true"

        />
</LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>