<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_marginBottom="8dp"
    >
    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:weightSum="1"
        >
  <ImageView
      android:layout_width="45dp"
      android:layout_height="45dp"
      android:src="@drawable/shipmen"
      android:layout_weight=".1"
      android:padding="8dp"
      />
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".9"
            android:text="@string/school_books"
            android:gravity="center_vertical"
            android:textSize="15sp"
            android:textColor="@color/black"
            />

    </LinearLayout>
    <TextView
        android:id="@+id/tv_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/delivery_number"
        app:layout_constraintTop_toBottomOf="@+id/ll"
        android:gravity="center"

        />
    <LinearLayout
        android:id="@+id/lll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tv_num"
        android:weightSum="1"
        >
        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/way_to"
            android:layout_weight=".1"
            android:padding="15dp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".9"
            android:text="@string/on_way_to"
            android:gravity="center_vertical"
            android:textSize="15sp"
            android:textColor="@color/blue"
            />


    </LinearLayout>

<LinearLayout
    android:id="@+id/llll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@+id/lll"
    android:orientation="horizontal"
android:gravity="center"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"

    >
    <ImageView
        android:id="@+id/im1"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:src="@drawable/ic_circular"
        android:tint="@color/gray3"
        android:layout_gravity="center_vertical"
        />
    <View
        android:layout_width="300dp"
        android:layout_height="10px"
        android:background="@color/gray4"
        android:layout_gravity="center_vertical"
        />

    <ImageView
        android:id="@+id/im2"
        android:layout_width="13dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:src="@drawable/ic_circular"
        android:tint="@color/gray3"

        />


</LinearLayout>
    <TextView
        android:id="@+id/tv_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        app:layout_constraintTop_toBottomOf="@+id/llll"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_marginBottom="8dp"

        />
    <TextView
        android:id="@+id/tv_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        app:layout_constraintTop_toBottomOf="@+id/llll"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_marginBottom="8dp"

        />

</androidx.constraintlayout.widget.ConstraintLayout>