<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:text="@string/school_books"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:paddingLeft="28dp"
            android:paddingRight="28dp"
            android:text="@string/shipping_tracking_number"
            android:textColor="@color/black"
            android:textSize="25sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/black"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginRight="28dp"
            android:layout_marginLeft="28dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:text="@string/cost_of_delivery"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="25sp"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:text="@string/cost_of_delivery"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="25sp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginRight="28dp"
            android:layout_marginLeft="28dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:text="@string/the_total_cost"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="25sp"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:text="@string/the_total_cost"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="25sp"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>